# frxos2

./: Cargo.toml
.cargo/: config
src/: fmt.rs  main.rs
src/vga/: character.rs  mod.rs
